@@ -27,7 +27,7 @@
 - Fix: [#15830] Objects with RCT1 images are very glitchy if OpenRCT2 is not linked to an RCT1 install.
 - Fix: [#15947, #15960] Removing a flat ride results in an error message and duplicate structures.
 - Fix: [#15998] Cannot set map size to the actual maximum.
-- Fix: [#16007] Scenario Editor "Entry Price" appears to the right of the value field.
+- Fix: [#16007] Scenario Editor “Entry Price” appears to the right of the value field.
 - Fix: [#16008] Tile Inspector can select elements from last tile without reselecting it.
 - Fix: [#16024] Go-Karts with more than 32 vehicles do not colour themselves correctly.
 - Fix: [#16063] Object Selection preview for objects with glass is broken.
@@ -38,6 +38,7 @@
 - Fix: [#16327] Crash on malformed network packet.
 - Fix: [#16449] [Plugin] Viewport doesn't hide when switching tabs.
 - Fix: [#16450] Banner style not copied when using tile inspector.
+- Fix: [#16541] “Same price throughout park” status not correctly imported for RCT1 saves.
 - Fix: [objects#165] Glitch when Bengal Tiger Cars go through a corner.
 
 0.3.5.1 (2021-11-21)
